--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <resources>
   <string name="accent_color">Akzentfarbe</string>
   <string name="accent_color_desc">Akzent-Farbe des Farbthemas, Standard ist pink</string>
